--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   google_fonts: ^6.2.1
   iconsax_flutter: ^1.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
