--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,7 +25,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.livo_project"
-    compileSdk = flutter.compileSdkVersion
+    // compileSdk = flutter.compileSdkVersion
+     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -38,7 +39,9 @@ android {
         applicationId = "com.example.livo_project"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        // minSdk = flutter.minSdkVersion
+        minSdk = 21
+        // targetSdk = flutter.targetSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
