--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_fonts: ^6.2.1
   iconsax_flutter: ^1.0.1
   intl: ^0.20.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
